# all-reduce

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  log.h
src/commLib/: CMakeLists.txt  Communicator.cpp  Communicator.h
src/cudaLib/: CMakeLists.txt  cuda_func.cu  cuda_func.h
